IHT-2577 fixed wrapping on Style Guide and fixed space after colon rule

--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -199,13 +199,15 @@ Markup:
 <nav class="page-nav" role="navigation" aria-label="Page navigation">
   <ul>
     <li class="page-nav__item page-nav__item--previous">
-      <a class="page-nav__link page-nav__link-previous" title="Navigate to previous part" rel="prev" href="#">
+      <a class="page-nav__link page-nav__link-previous"
+         title="Navigate to previous part" rel="prev" href="#">
         <span class="page-nav__label">Previous </span>
         <span class="page-nav__title">Overview</span>
       </a>
     </li>
     <li class="page-nav__item page-nav__item--next">
-      <a class="page-nav__link page-nav__link-next" title="Navigate to next part" rel="next" href="#">
+      <a class="page-nav__link page-nav__link-next"
+         title="Navigate to next part" rel="next" href="#">
         <span class="page-nav__label">Next</span>
         <span class="page-nav__title">Inheritance Tax reliefs</span>
       </a>
@@ -216,47 +218,47 @@ Markup:
 Styleguide Navigation.Page Navigation
 */
 .page-nav {
-  display:block;
-  margin:em(64) 0 0 0;
-  padding:em(12) 0;
-  border-bottom:1px solid $light-grey;
+  display: block;
+  margin: em(64) 0 0 0;
+  padding: em(12) 0;
+  border-bottom: 1px solid $light-grey;
 
   @include contain-floats;
 
   @include media(mobile) {
-    margin:em(32) 0 0 0
+    margin: em(32) 0 0 0
   }
 }
 
 .page-nav__item {
   @include core-19;
-  line-height:1.25;
-  float:left;
-  text-align:right;
-  margin:em(5) 0;
-  padding:0;
-  width:49%;
+  line-height: 1.25;
+  float: left;
+  text-align: right;
+  margin: em(5) 0;
+  padding: 0;
+  width: 49%;
 
   @include media(mobile) {
     @include core-14;
-    line-height:1.14286;
-    float:none;
-    width:100%
+    line-height: 1.14286;
+    float: none;
+    width: 100%
   }
 }
 
 .page-nav__item--previous {
-  float:left;
-  text-align:left;
+  float: left;
+  text-align: left;
 }
 
 .page-nav__link {
-  display:block;
-  color:$govuk-blue-colour;
-  text-decoration:none;
+  display: block;
+  color: $govuk-blue-colour;
+  text-decoration: none;
 
   &:hover, &:active {
-    background-color:$shaded-bg-grey;
+    background-color: $shaded-bg-grey;
   }
 
   &:focus {
@@ -274,15 +276,15 @@ Styleguide Navigation.Page Navigation
 }
 
 .page-nav__link-previous {
-  padding:em(14) 0 em(14) em(48);
+  padding: em(14) 0 em(14) em(48);
 
   &:before {
-    background:transparent url(../images/icons/arrow-sprite.png) no-repeat em(-20) em(-11);
-    margin:em(-4) 0 0 em(-32);
-    float:left;
-    width:em(30);
-    height:em(38);
-    content:" ";
+    background: transparent url(../images/icons/arrow-sprite.png) no-repeat em(-20) em(-11);
+    margin: em(-4) 0 0 em(-32);
+    float: left;
+    width: em(30);
+    height: em(38);
+    content: " ";
 
     @include media(mobile) {
       font-size: 19px;
@@ -291,33 +293,33 @@ Styleguide Navigation.Page Navigation
 }
 
 .page-nav__item--next {
-  float:right;
-  text-align:right;
+  float: right;
+  text-align: right;
 }
 
 .page-nav__link-next {
-  padding:em(14) em(48) em(14) 0;
+  padding: em(14) em(48) em(14) 0;
 
   &:before {
-    background:transparent url(../images/icons/arrow-sprite.png) no-repeat em(-102) em(-11);
-    margin:em(-4) em(-32) 0 0;
-    float:right;
-    width:em(30);
-    height:em(38);
-    content:" ";
+    background: transparent url(../images/icons/arrow-sprite.png) no-repeat em(-102) em(-11);
+    margin: em(-4) em(-32) 0 0;
+    float: right;
+    width: em(30);
+    height: em(38);
+    content: " ";
   }
 
   @include media(mobile) {
     font-size: 19px;
-    text-align:right
+    text-align: right
   }
 }
 
 .page-nav__label {
   @include core-27;
-  line-height:1.25;
-  margin-bottom:em(3, 27);
-  display:block;
+  line-height: 1.25;
+  margin-bottom: em(3, 27);
+  display: block;
 
   @include media(mobile) {
     @include core-24;
@@ -325,7 +327,7 @@ Styleguide Navigation.Page Navigation
 }
 
 .page-nav__title {
-  text-decoration:underline;
+  text-decoration: underline;
 
   @include media(mobile) {
     @include core-19;
